Updated correlation code

--- a/cor_reg.qmd
+++ b/cor_reg.qmd
@@ -100,25 +100,57 @@ Well, we can calculate two things - the *amount of variation explained*, which i
 We can write a function to perform all of these options:
 
 ```{r}
-biol305_cor <- function(x, y, method){
-  r <- cor(x, y, method = method)
-  
-  n <- length(x)
+biol305_cor <- function(x=NA, y=NA, method = "pearson"){
+  if(is.data.frame(x)==T){
+    if(ncol(x)==2){
+      r <- cor(x[,1], x[,2], method = method)
+    }else{
+      r <- cor(x, method = method)
+    }
+
+    r2 <- r
+    r[r==1|r==-1] <- 0
+    
+    n <- 2*nrow(x)
+  }else{
+    r <- cor(x, y, method = method)
+    
+    n <- 2*length(x)
+  }
   
   t_val <- r*sqrt((n-2)/(1-r^2))
   
   p <- pt(t_val, df = n - 2)
-  if(p > 0.5){p <- 1 - p}
   
-  if(p > 0.005){p <- round(p, 2)}
-  if(p > 0.0005){p <- round(p, 3)}
-  if(p > 0.00005){p <- round(p, 4)}
-  if(p < 0.00005){p <- "< 0.0001"}
+  p[p > 0.5] <- 1 - p[p > 0.5]
+  p[p > 0.005] <- round(p[p > 0.005],2)
+  p[p > 0.0005] <- round(p[p > 0.0005],3)
+  p[p > 0.00005] <- round(p[p > 0.00005],4)
+  p[p < 0.00005] <- "< 0.0001"
   
-  print(paste0("Correlation: ", round(r, 2)))
-  print(paste0("Degrees of freedom: ", n - 2))
-  print(paste0("t value: ", round(t_val, 2)))
-  print(paste0("P value: ", p))
+  if(is.data.frame(x)==T){
+    print("Correlation:")
+    print(round(r, 2))
+    if(ncol(x) == 2){
+      print(paste0("Degrees of freedom: ", n - 2))
+      print(paste0("t value: ", round(t_val, 2)))
+      print(paste0("P value: ", p))
+    }
+    if(ncol(x) > 2){
+      print(paste0("Degrees of freedom: ", n - 2))
+      print("")
+      print("t value: ")
+      print(round(t_val, 2))
+      print("")
+      print("P value: ")
+      print(p)
+    }
+  }else{
+    print(paste0("Correlation: ", round(r, 2)))
+    print(paste0("Degrees of freedom: ", n - 2))
+    print(paste0("t value: ", round(t_val, 2)))
+    print(paste0("P value: ", p))
+  }
 }
 ```
 
